--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">EmployeeDetailsWithAsyncTaskAPI</string>
     <string name="employee_details">Employee Details</string>
+    <string name="employee_name">NAME :</string>
+    <string name="employee_salary">SALARY :</string>
 </resources>
