--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="employee_details">Employee Details</string>
     <string name="employee_name">NAME :</string>
     <string name="employee_salary">SALARY :</string>
+    <string name="salary">SALARY :</string>
+    <string name="name">NAME :</string>
 </resources>
